--- a/popup.html
+++ b/popup.html
@@ -304,7 +304,7 @@ function onTimelineRetrieved(tweets, timelineId) {
     Paginator.needsMore = false;
     Renderer.assemblyTweets(tweets, timelineId);
   } else {
-    showError('Unexpected error "' + tweetManager.currentError + '" during communication.', 'loadTimeline');
+    showError('Unexpected error ' + tweetManager.currentError() + ' during communication.', 'loadTimeline');
   }
   loadingNewTweets = false;
 }
@@ -325,34 +325,8 @@ function loadTimeline(force, forcedTimeline) {
   tweetManager.giveMeTweets(forcedTimeline, onTimelineRetrieved, force, cacheOnly);
 }
 
-function clearUserData() {
-  if(!$("input[name='remember']").is(":checked")) {
-    localStorage.removeItem('remember');
-    localStorage.removeItem('username');
-    localStorage.removeItem('password');
-    localStorage.removeItem('logged');
-  }
-}
-
-function signin() {
-  if($("input[name='remember']").is(":checked")) {
-    localStorage.remember = true;
-    localStorage.username = $("input[name='user']").val();
-    localStorage.password = $("input[name='password']").val();
-    localStorage.logged = true;
-  }
-  chrome.extension.getBackgroundPage().signin($("input[name='user']").val(), $("input[name='password']").val());
-  replaceUsername();
-  loadTimeline();
-
-  $("#signin").hide();
-  $("#workspace").show();
-  ThemeManager.updateThemeSelector();
-}
-
 function signout() {
-  localStorage.removeItem('logged');
-  chrome.extension.getBackgroundPage().signout();
+  tweetManager.signout();
   window.close();
 }
 
@@ -388,7 +362,7 @@ function loadNewTweets() {
 }
 
 function replaceUsername() {
-  $(".__username").text(chrome.extension.getBackgroundPage().username);
+  $(".__username").text(tweetManager.twitterBackend.username());
 }
 
 function prepareAndLoadTimeline() {
@@ -414,23 +388,8 @@ function prepareAndLoadTimeline() {
 }
 
 $(function() {
-  var twitterBackend = chrome.extension.getBackgroundPage().getTwitterBackend();
-  if(!twitterBackend) {
-    $("#signin").show();
-    $("input[name='user']").focus();
-
-    if(localStorage.remember) {
-      $("input[name='user']").val(localStorage.username);
-      $("input[name='password']").val(localStorage.password);
-      $("input[name='remember']").attr('checked', 'checked');
-      if(localStorage.logged) {
-        signin();
-      }
-    }
-  } else {
-    $("#workspace").show();
-    ThemeManager.updateThemeSelector();
-  }
+  $("#workspace").show();
+  ThemeManager.updateThemeSelector();
   if(tweetManager.isComposing) {
     Composer.showComposeArea(true, true);
     $("#compose_tweet_area textarea").val(tweetManager.saveMessage || '');
@@ -467,23 +426,16 @@ $(function() {
       }
     });
   });
-
 });
+
+var twitterBackend = tweetManager.twitterBackend;
+if(!twitterBackend.authenticated()) {
+  twitterBackend.startAuthentication();
+  window.close();
+}
 </script>
 </head>
 <body>
-
-<div id="signin" style="display: none;">
-  <h1>Twitter credentials</h1>
-  <label for="user">Username:</label>
-  <input name="user" type="text"/>
-  <label for="password">Password:</label>
-  <input name="password" type="password"/>
-  <input type="checkbox" name="remember" onclick="clearUserData();"/> Remember me
-
-  <input value="Go!" type="button" onclick="signin()"/>
-</div>
-
 <div id="error" style="display: none;"></div>
 
 <div id="workspace" style="display: none;">
