--- a/popup.html
+++ b/popup.html
@@ -1,3 +1,5 @@
+<!DOCTYPE html>
+
 <html>
 <head>
 <!--
@@ -11,6 +13,18 @@ when loading it for the first time. (Don't know why...)
 <link rel="stylesheet" type="text/css" href="css/chromified-theme/jquery-ui-1.7.2.custom.css" class="theme" />
 
 <link rel="stylesheet" type="text/css" href="css/sexy-combo.css" />
+
+<script>
+var tweetManager = chrome.extension.getBackgroundPage().TweetManager.instance;
+var tweetManagerConst = chrome.extension.getBackgroundPage().TweetManagerConstants;
+var twitterBackend = tweetManager.twitterBackend;
+
+if(!twitterBackend.authenticated()) {
+  twitterBackend.startAuthentication();
+  window.close();
+  return;
+}
+</script>
 
 <script type="text/javascript" src="lib/jquery.js"></script>
 <script type="text/javascript" src="lib/jquery.sexy-combo.js"></script>
@@ -48,9 +62,6 @@ $.fn.hoverFor = function(time, mainCallback, startingCallback, abortCallback) {
     );
  });
 };
-
-var tweetManager = chrome.extension.getBackgroundPage().TweetManager.instance;
-var tweetManagerConst = chrome.extension.getBackgroundPage().TweetManagerConstants;
 
 var Paginator = {
   needsMore: false,
@@ -429,12 +440,6 @@ $(function() {
     });
   });
 });
-
-var twitterBackend = tweetManager.twitterBackend;
-if(!twitterBackend.authenticated()) {
-  twitterBackend.startAuthentication();
-  window.close();
-}
 </script>
 </head>
 <body>
