URL Shortener UI, now we need some logic.

--- a/background.html
+++ b/background.html
@@ -210,6 +210,7 @@ TweetsTimeline.prototype = {
 
 function ComposerData() {
   this.saveMessage = '';
+  this.urlShortener = '';
   this.isComposing = false;
   this.replyId = null;
 }
