Reorganizing 3rd party libs and some clean up

--- a/background.html
+++ b/background.html
@@ -1,9 +1,7 @@
-<script type="text/javascript" src="lib/jquery.js"></script>
+<script type="text/javascript" src="lib/3rdparty/jquery.js"></script>
+<script type="text/javascript" src="lib/3rdparty/oauth.js"></script>
+<script type="text/javascript" src="lib/3rdparty/sha1.js"></script>
 <script type="text/javascript" src="lib/twitter_lib.js"></script>
-<script type="text/javascript" src="lib/jquery.base64.js"></script>
-
-<script type="text/javascript" src="lib/oauth.js"></script>
-<script type="text/javascript" src="lib/sha1.js"></script>
 
 <script>
 
