--- a/popup.html
+++ b/popup.html
@@ -25,11 +25,11 @@ if(!twitterBackend.authenticated()) {
 }
 </script>
 
-<script type="text/javascript" src="lib/jquery.js"></script>
-<script type="text/javascript" src="lib/jquery.sexy-combo.js"></script>
-<script type="text/javascript" src="lib/jquery-ui-custom.js"></script>
-<script type="text/javascript" src="lib/jquery_replace_html.js"></script>
+<script type="text/javascript" src="lib/3rdparty/jquery.js"></script>
+<script type="text/javascript" src="lib/3rdparty/jquery.sexy-combo.js"></script>
+<script type="text/javascript" src="lib/3rdparty/jquery-ui-custom.js"></script>
 
+<script type="text/javascript" src="lib/jquery_replace_html.js"></script>
 <script type="text/javascript" src="lib/debug.js"></script>
 <script type="text/javascript" src="lib/twitter_lib.js"></script>
 <script>
